# rust_tutorial

advanced/src/: main.rs
async_and_wait/: Cargo.toml
async_and_wait/src/: main.rs
async_concurrency/: Cargo.toml
branches/src/: main.rs
collections/src/: main.rs
concurrency/src/: main.rs
cratesio/: Cargo.toml
cratesio/src/: main.rs
enums/src/: main.rs
errors/src/: main.rs
functional/src/: main.rs
functions/src/: main.rs
generics/src/: aggregator.rs  main.rs
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
oop/src/: lib.rs  main.rs
ownership/src/: main.rs
reference/src/: main.rs
restaurant/src/: lib.rs
scratch/: main.rs
slice/src/: main.rs
smart_pointers/src/: main.rs
structs/src/: main.rs
tests/src/: lib.rs
tests/tests/: integrtion_test.rs
tests/tests/common/: mod.rs
variables/src/: main.rs
web_server/: Cargo.toml
web_server/src/: lib.rs  main.rs
workspace/adder/: Cargo.toml
workspace/adder/src/: main.rs
