[package]
name = "cratesio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.*] sections define how to configure different builds.
[profile.dev]
opt-level = 0

[profiles.release]
opt-level = 3

[dependencies]
